--- a/compile/Makefile
+++ b/compile/Makefile
@@ -120,7 +120,7 @@ docs:
 	${DOCGEN} ${DOCGEN_CONFIG}
 
 download:
-	ssh cyclops rm /home/tftpboot/rpi${NODE}.img
+	ssh cyclops rm -f /home/tftpboot/rpi${NODE}.img
 	scp xinu.bin ${USERNAME}@cyclops:/home/tftpboot/rpi${NODE}.img
 	ssh cyclops chmod go+rw /home/tftpboot/rpi${NODE}.img
 	rpipower off ${NODE}
