--- a/compile/Makefile
+++ b/compile/Makefile
@@ -3,8 +3,8 @@
 #
 #  $Id: Makefile 2132 2009-11-17 23:22:38Z brylow $
 
-# PLATFORM = arm-qemu
-PLATFORM = raspberry-pi
+PLATFORM = arm-qemu
+#PLATFORM = raspberry-pi
 # PLATFORM = arm-qemu
 
 NODE=17
