--- a/compile/platforms/arm-qemu/xinu.conf
+++ b/compile/platforms/arm-qemu/xinu.conf
@@ -70,6 +70,7 @@ CONSOLE   is tty      on SOFTWARE
 #define USE_TAR   TRUE          /* enable data archives             */
 #define GPIO_BASE 0xB8000060    /* General-purpose I/O lines        */
 #define FLUKE_ARM 1
+#define FS 1
 
 // XXX: is an analogous constant defined already?
 // This is used in uartInit.c
