--- a/compile/platforms/raspberry-pi/xinu.conf
+++ b/compile/platforms/raspberry-pi/xinu.conf
@@ -68,6 +68,7 @@ CONSOLE   is tty      on SOFTWARE
 #define USE_TLB   FALSE         /* make use of TLB                  */
 #define USE_TAR   TRUE          /* enable data archives             */
 #define GPIO_BASE 0x20200000  /* General-purpose I/O lines        */
+#define FS 1
 
 // XXX: is an analogous constant defined already?
 // This is used in uartInit.c
